feat: adiciona perfis e protege identidade do atendimento