@@ -8,7 +8,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 @Entity
 @Table(name = "usuarios")
@@ -28,11 +29,29 @@ public class Usuario implements UserDetails {
     @Size(min = 8, max = 72, message = "A senha deve ter entre 8 e 72 caracteres")
     private String senha;
 
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false, length = 20)
+    private PerfilUsuario perfil = PerfilUsuario.PACIENTE;
+
+    @OneToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "id_paciente", unique = true)
+    private Paciente paciente;
+
+    @OneToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "id_medico", unique = true)
+    private Medico medico;
+
     public Usuario() {}
 
     public Usuario(String email, String senha) {
         this.email = email;
         this.senha = senha;
+    }
+
+    public Usuario(String email, String senha, PerfilUsuario perfil) {
+        this.email = email;
+        this.senha = senha;
+        this.perfil = perfil;
     }
 
     public Long getId() {
@@ -55,10 +74,34 @@ public class Usuario implements UserDetails {
         this.senha = senha;
     }
 
+    public PerfilUsuario getPerfil() {
+        return perfil;
+    }
+
+    public void setPerfil(PerfilUsuario perfil) {
+        this.perfil = perfil;
+    }
+
+    public Paciente getPaciente() {
+        return paciente;
+    }
+
+    public void setPaciente(Paciente paciente) {
+        this.paciente = paciente;
+    }
+
+    public Medico getMedico() {
+        return medico;
+    }
+
+    public void setMedico(Medico medico) {
+        this.medico = medico;
+    }
+
     // Métodos do UserDetails
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // ou sua lógica de roles
+        return List.of(new SimpleGrantedAuthority("ROLE_" + perfil.name()));
     }
 
     @Override
